--- a/sazonalidade_dia_sequencial_milho.ipynb
+++ b/sazonalidade_dia_sequencial_milho.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "### Sazonalidade Milho\n",
     "\n",
-    "> Análise de sazonalidade do milho através dos preços médios diários apresentados durante um período de 5 anos."
+    "Análise de sazonalidade do milho através dos preços médios diários apresentados durante um período de 5 anos."
    ]
   },
   {
@@ -30,8 +30,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Os dados importados do arquivo `CCM-Daily.csv` abaixo, foram obtivos através da ferramenta Meta Trader 5.  \n",
-    "> Valores estes que representam os candles diários do do milho (código `CCM`)."
+    "Os dados importados do arquivo `CCM-Daily.csv` abaixo, foram obtivos através da ferramenta Meta Trader 5.  \n",
+    "Valores estes que representam os candles diários do do milho (código `CCM`)."
    ]
   },
   {
@@ -54,7 +54,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Histórico de preço real disponibilizado pela plataforma MT5:"
+    "Histórico de preço real disponibilizado pela plataforma MT5:"
    ]
   },
   {
@@ -137,7 +137,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Histórico sem GAPs (os dias dos finais de semana e feriados contém os valores prévios):"
+    "Histórico sem GAPs (os dias dos finais de semana e feriados contém os valores prévios):"
    ]
   },
   {
@@ -176,7 +176,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Calcula média dos valores por dia do ano."
+    "Calcula média dos valores por dia do ano."
    ]
   },
   {
@@ -278,7 +278,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Apresenta gráfico com a média dos valores calcalados:"
+    "Apresenta gráfico com a média dos valores calculados:"
    ]
   },
   {
@@ -319,17 +319,6 @@
     "\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "FG2eL36nN7Um"
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
