Sazaonalidade intra-mensal do Dolar

--- a/sazonalidade_dia_sequencial_milho.ipynb
+++ b/sazonalidade_dia_sequencial_milho.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "### Sazonalidade Milho\n",
     "\n",
-    "Análise de sazonalidade do milho através dos preços médios diários apresentados durante um período de 5 anos."
+    "Análise de sazonalidade intra-anual do milho através dos preços médios diários apresentados durante um período de 5 anos."
    ]
   },
   {
